--- a/index.html
+++ b/index.html
@@ -32,10 +32,147 @@
 </head>
 
 <body>
+	<!--=======================
+		start html body code 
+		======================-->
+	<div class="container-fluid">
+		<!--=======================
+			start header
+		======================-->
+		<header>
+			<!--========== start top-bar========-->
+			<div class="top-bar">
+				<!--========== start nav========-->
+				<nav class="navbar align-items-start">
+					<div class="container">
+					<!--========= toggle button =======-->
+					  <button class="navbar-toggler" type="button" data-toggle="show" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+					    <span class="toggler-icon"></span>
+					  </button>
+					<!--========= manu list =======-->
+					  <div class="navbar-collapse" id="navbar">
+					    <ul class="navbar-nav mr-auto" role="manu">
+					      <li class="nav-item active">
+					        <a class="nav-link" href="#">clients</a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="#">news</a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="#">news</a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="#">news</a>
+					      </li>
+					    </ul>
+					  </div>
+					<!--========= manu item in big screen =======-->
+					  <div class="navbar-items  d-flex">
+					  	<ul class="navbar-nav flex-row">
+					  		<li class="nav-item">
+					  			<a href="#" class="nav-link">clients</a>
+					  		</li>
+					  		<li class="nav-item">
+					  			<a href="#" class="nav-link">news</a>
+					  		</li>
+					  	</ul>
+					  </div>
+					  <a class="navbar-brand" href="#">
+					  	mitalent
+					  </a>
+				  </div>
+				</nav>
+				<!--========== end nav========-->
+				<!--========== start search========-->
+				<div class="search">
+					<div class="container">
+						<input type="text" name="search" value="" placeholder="search..." id="search" />
+						<label for="search"><i class="fa fa-search" aria-hidden="true"></i></label>
+					</div>
+				</div>
+				<!--========== end search========-->
+			</div>
+			<!--========== end top-bar========-->
+			<!--========== start slider========-->
+			<div class="slider d-flex">
+				<div class="container">
+					<div class="carousel slide" id="slider-header">
+						<!--========== start slider item========-->
+					    <div class="carousel-item d-flex align-items-stretch">
+					    	<div class="socal-links">
+					    		<ul class="list-group">
+					    			<li class="list-group-item">
+					    				<a href="#!" aria-label="facebook"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+					    			</li>
+					    			<li class="list-group-item">
+					    				<a href="#!" aria-label="twitter"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+					    			</li>
+					    			<li class="list-group-item">
+					    				<a href="#!" aria-label="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+					    			</li>
+					    			<li class="list-group-item">
+					    				<a href="#!" aria-label="youtube"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+					    			</li>
+					    		</ul>
+					    		<div class="item-number">
+					    			01 
+					    		</div>
+					    		<button class="btn view-profile h-style text-uppercase">
+					    			<span>view profile</span>
+					    		</button>
+					    	</div>
+					    	<figure>
+					    		<img src="./img/slider-1.jpg" title="img1" alt="img1" />
+					    		<figcaption>
+					    			<h2>derek<br/>anderson</h2>
+					    			<p class="mt-5">british comedian</p>
+					    		</figcaption>
+					    	</figure>
+					    </div>
+						<!--========== start slider item========-->
+					</div>
+					<!--========== slider button ========-->
+					<div class="carousel-dota">
+						<ol class="carousel-indicators">
+						   <li data-target="#slider-header" data-slide-to="0" class="active">01</li>
+						   <li data-target="#slider-header" data-slide-to="1">02</li>
+						   <li data-target="#slider-header" data-slide-to="2">03</li>
+						</ol>
+					</div>
+				</div>
+			</div>
+			<!--========== end slider========-->
+		</header>
+		<!--=======================
+			end header
+		======================-->
+		<!--=======================
+			start main
+		======================-->
+		<main>
+			this is main
+		</main>
+		<!--=======================
+			end main
+		======================-->
+		<!--=======================
+			start footer
+		======================-->
+		<footer>
+			this is footer
+		</footer>
+		<!--=======================
+			end footer
+		======================-->
+	</div>
+	<!--=======================
+		end html body code 
+		======================-->
     <!--jquery v1.11-->
-    <script src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
     <!--main script-->
-    <script src="js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
