--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					    			</li>
 					    		</ul>
 					    		<div class="line"></div>
-					    		<button class="btn view-profile h-style text-uppercase">
+					    		<button class="btn view-profile text-uppercase">
 					    			<span>view profile</span>
 					    		</button>
 					    	</div>
@@ -160,7 +160,7 @@
 					    			</li>
 					    		</ul>
 					    		<div class="line"></div>
-					    		<button class="btn view-profile h-style text-uppercase">
+					    		<button class="btn view-profile text-uppercase">
 					    			<span>view profile</span>
 					    		</button>
 					    	</div>
@@ -191,7 +191,7 @@
 					    			</li>
 					    		</ul>
 					    		<div class="line"></div>
-					    		<button class="btn view-profile h-style text-uppercase">
+					    		<button class="btn view-profile text-uppercase">
 					    			<span>view profile</span>
 					    		</button>
 					    	</div>
@@ -222,7 +222,7 @@
 					    			</li>
 					    		</ul>
 					    		<div class="line"></div>
-					    		<button class="btn view-profile h-style text-uppercase">
+					    		<button class="btn view-profile text-uppercase">
 					    			<span>view profile</span>
 					    		</button>
 					    	</div>
@@ -256,7 +256,27 @@
 			start main
 		======================-->
 		<main>
-			this is main
+			<!--===== start clients=========-->
+			<section class="clients pt-5 pb-5">
+				<div class="container">
+					<div class="clients-filter mb-4">
+						<ul class="list-inline text-center">
+							<li class="list-inline-item h-style"><button type="button">actor</button></li>
+							<li class="list-inline-item h-style"><button type="button">musician</button></li>
+							<li class="list-inline-item h-style"><button type="button">comdian</button></li>
+							<li class="list-inline-item h-style"><button type="button">model</button></li>
+						</ul>
+					</div>
+					<div class="clients-item">
+						<div class="row">
+							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
+								this is item
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!--===== end clients=========-->
 		</main>
 		<!--=======================
 			end main
