--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					    			</li>
 					    		</ul>
 					    		<div class="line"></div>
-					    		<button class="btn view-profile text-uppercase">
+					    		<button class="btn text-uppercase">
 					    			<span>view profile</span>
 					    		</button>
 					    	</div>
@@ -160,7 +160,7 @@
 					    			</li>
 					    		</ul>
 					    		<div class="line"></div>
-					    		<button class="btn view-profile text-uppercase">
+					    		<button class="btn text-uppercase">
 					    			<span>view profile</span>
 					    		</button>
 					    	</div>
@@ -191,7 +191,7 @@
 					    			</li>
 					    		</ul>
 					    		<div class="line"></div>
-					    		<button class="btn view-profile text-uppercase">
+					    		<button class="btn text-uppercase">
 					    			<span>view profile</span>
 					    		</button>
 					    	</div>
@@ -222,7 +222,7 @@
 					    			</li>
 					    		</ul>
 					    		<div class="line"></div>
-					    		<button class="btn view-profile text-uppercase">
+					    		<button class="btn text-uppercase">
 					    			<span>view profile</span>
 					    		</button>
 					    	</div>
@@ -259,21 +259,149 @@
 			<!--===== start clients=========-->
 			<section class="clients pt-5 pb-5">
 				<div class="container">
-					<div class="clients-filter mb-4">
+					<div class="clients-filter mb-5">
 						<ul class="list-inline text-center">
-							<li class="list-inline-item h-style"><button type="button">actor</button></li>
-							<li class="list-inline-item h-style"><button type="button">musician</button></li>
-							<li class="list-inline-item h-style"><button type="button">comdian</button></li>
-							<li class="list-inline-item h-style"><button type="button">model</button></li>
+							<li class="list-inline-item h-style active"><button type="button" class="btn-filter" data-target="all">all</button></li>
+							<li class="list-inline-item h-style"><button type="button" class="btn-filter" data-target="actor">actor</button></li>
+							<li class="list-inline-item h-style"><button type="button" class="btn-filter" data-target="musician">musician</button></li>
+							<li class="list-inline-item h-style"><button type="button" class="btn-filter" data-target="comdian">comdian</button></li>
+							<li class="list-inline-item h-style"><button type="button" class="btn-filter" data-target="model">model</button></li>
 						</ul>
 					</div>
+					<!--clients grid -->
 					<div class="clients-item">
 						<div class="row">
-							<div class="col-12 col-md-6 col-lg-4 col-xl-3">
-								this is item
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="comdian">
+									<figure>
+										<img src="./img/slider-1.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>keith ruiz</h4>
+												<span>comdian</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="actor">
+									<figure>
+										<img src="./img/slider-2.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>jon ruiz</h4>
+												<span>actor</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="musician">
+									<figure>
+										<img src="./img/slider-3.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>keith smith</h4>
+												<span>musician</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="model">
+									<figure>
+										<img src="./img/slider-4.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>pro ruiz</h4>
+												<span>model</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="comdian">
+									<figure>
+										<img src="./img/slider-1.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>keith ruiz</h4>
+												<span>comdian</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="actor">
+									<figure>
+										<img src="./img/slider-2.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>jon ruiz</h4>
+												<span>actor</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="musician">
+									<figure>
+										<img src="./img/slider-3.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>keith smith</h4>
+												<span>musician</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="model">
+									<figure>
+										<img src="./img/slider-4.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>pro ruiz</h4>
+												<span>model</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
 							</div>
 						</div>
 					</div>
+					<button type="button" class="btn btn-primary text-uppercase">explore more</button>
 				</div>
 			</section>
 			<!--===== end clients=========-->
