--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 					</div>
 					<!--clients grid -->
 					<div class="clients-item">
-						<div class="row">
+						<div class="row m-0">
 							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
 								<div class="client" data-filter="comdian">
 									<figure>
