prefix mixin used

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		======================-->
 		<header>
 			<!--========== start top-bar========-->
-			<div class="top-bar">
+			<div class="top-bar d-flex align-items-start">
 				<!--========== start nav========-->
 				<nav class="navbar align-items-start">
 					<div class="container">
@@ -96,7 +96,7 @@
 				</nav>
 				<!--========== end nav========-->
 				<!--========== start search========-->
-				<div class="search">
+				<div class="search d-flex">
 					<div class="container">
 						<form id="search">
 							<input type="text" name="search" value="" placeholder="search..." id="searchInput" />
@@ -110,7 +110,7 @@
 			<!--========== start slider========-->
 			<div class="slider d-flex">
 				<div class="container">
-					<div class="carousel slide" id="slider-header">
+					<div class="carousel" id="slider-header">
 						<!--========== start slider item========-->
 					    <div class="carousel-item d-flex align-items-stretch active">
 					    	<div class="socal-links" data-number="01">
