--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
 
 <body>
 	<!--=======================
+		start preload
+		======================-->
+	<div class="preload">
+		<div class="preload-block">
+			<span class="preload-circal"></span>
+			<span class="preload-circal"></span>
+			<span class="preload-circal"></span>
+		</div>
+	</div>
+	<!--=======================
+		end preload
+		======================-->
+	<!--=======================
 		start html body code 
 		======================-->
 	<div class="container-fluid">
