--- a/index.html
+++ b/index.html
@@ -418,6 +418,59 @@
 				</div>
 			</section>
 			<!--===== end clients=========-->
+			<!--===== start stories=========-->
+			<section class="stories pt-5 pb-5">
+				<div class="container">
+					<h2 class="title-h mb-5">our stories</h2>
+					<!--======== start stories grid =======-->
+					<div class="row">
+						<div class="col-12 col-md-6 col-lg-4">
+							<a class="media" href="#!">
+								<figure class="mr-3">
+							 		<img src="./img/slider-1.jpg" alt="media-img" title="media-img">
+							 		<figcaption class="d-flex align-items-center justify-content-center">
+							 			<i class="fa fa-play" aria-hidden="true"></i>
+							 		</figcaption>
+							  	</figure>
+								<div class="media-body text-left">
+								    <h3 class="mt-0">5 reasons to keep your beauty salon reservation</h3>
+								    <time class="time">8 march, 2020</time>
+							  	</div>
+							</a>
+						</div>
+						<div class="col-12 col-md-6 col-lg-4">
+							<a class="media" href="#!">
+								<figure class="mr-3">
+							 		<img src="./img/slider-2.jpg" alt="media-img" title="media-img">
+							 		<figcaption class="d-flex align-items-center justify-content-center">
+							 			<i class="fa fa-play" aria-hidden="true"></i>
+							 		</figcaption>
+							  	</figure>
+								<div class="media-body text-left">
+								    <h3 class="mt-0">benjamin franklin method of habit formation</h3>
+								    <time class="time">8 march, 2020</time>
+							  	</div>
+							</a>
+						</div>
+						<div class="col-12 col-md-6 col-lg-4">
+							<a class="media" href="#!">
+								<figure class="mr-3">
+							 		<img src="./img/slider-3.jpg" alt="media-img" title="media-img">
+							 		<figcaption class="d-flex align-items-center justify-content-center">
+							 			<i class="fa fa-play" aria-hidden="true"></i>
+							 		</figcaption>
+							  	</figure>
+								<div class="media-body text-left">
+								    <h3 class="mt-0">29 mativational quotes for business</h3>
+								    <time class="time">8 march, 2020</time>
+							  	</div>
+							</a>
+						</div>
+					</div>
+					<!--======== end stories grid =======-->
+				</div>
+			</section>
+			<!--===== end stories=========-->
 		</main>
 		<!--=======================
 			end main
