--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					  </button>
 					<!--========= manu list =======-->
 					  <div class="navbar-collapse" id="navbar">
-					    <ul class="navbar-nav mr-auto" role="menu">
+					    <ul class="navbar-nav mr-auto text-center" role="menu">
 					      <li class="nav-item active">
 					        <a class="nav-link" href="#" role="menuitem">home</a>
 					      </li>
@@ -90,7 +90,7 @@
 					    </ul>
 					  </div>
 					<!--========= manu item in big screen =======-->
-					  <div class="navbar-items  d-flex">
+					  <div class="navbar-items d-none  d-md-flex">
 					  	<ul class="navbar-nav flex-row" role="menu">
 					  		<li class="nav-item">
 					  			<a href="#" class="nav-link" role="menuitem">clients</a>
