--- a/index.html
+++ b/index.html
@@ -471,6 +471,69 @@
 				</div>
 			</section>
 			<!--===== end stories=========-->
+			<!--===== start news=========-->
+			<section class="news pt-5 pb-5">
+				<div class="container">
+					<div class="row">
+						<div class="col-12 col-lg-8">
+							<!--trending-->
+							<div class="trending">
+								<a href="#!">
+									<figure class="m-0">
+										<img src="./img/slider-1.jpg" alt="trending" title="trending"/>
+										<figcaption>
+											<div class="trending-title">
+												<i class="fa fa-play" aria-hidden="true"></i>
+												<h3 class="mt-4 mb-4">use your reset button to change your vibration</h3>
+												<time class="time">8 march, 2020</time>
+											</div>
+										</figcaption>
+									</figure>
+								</a>
+							</div>
+						</div>
+						<div class="col-12 col-lg-4">
+							<div id="news-slider" class="carousel slide" data-ride="carousel">
+							  <ol class="carousel-indicators">
+							    <li data-target="#news-slider" data-slide-to="0" class="active"></li>
+							    <li data-target="#news-slider" data-slide-to="1"></li>
+							    <li data-target="#news-slider" data-slide-to="2"></li>
+							  </ol>
+							  <div class="carousel-inner">
+							    <div class="carousel-item active">
+							      <figure>
+							      	<img class="d-block" src="./img/slider-3.jpg" alt="First slide">
+							      	<figcaption>
+							      		<h4>Lorem ipsum dolor sit amet, consectetur.</h4>
+							      		<time class="time">8 march, 2020</time>
+							      	</figcaption>
+							      </figure>
+							    </div>
+							    <div class="carousel-item">
+							      <figure>
+							      	<img class="d-block" src="./img/slider-1.jpg" alt="First slide">
+							      	<figcaption>
+							      		<h4>Lorem ipsum dolor sit amet, consectetur.</h4>
+							      		<time class="time">8 march, 2020</time>
+							      	</figcaption>
+							      </figure>
+							    </div>
+							    <div class="carousel-item">
+							      <figure>
+							      	<img class="d-block" src="./img/slider-2.jpg" alt="First slide">
+							      	<figcaption>
+							      		<h4>Lorem ipsum dolor sit amet, consectetur.</h4>
+							      		<time class="time">8 march, 2020</time>
+							      	</figcaption>
+							      </figure>
+							    </div>
+							  </div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!--===== end news=========-->
 		</main>
 		<!--=======================
 			end main
