--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					        <a class="nav-link" href="#" role="menuitem">clients</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="#" role="menuitem">news</a>
+					        <a class="nav-link" href="./news.html" role="menuitem">news</a>
 					      </li>
 					      <li class="nav-item">
 					        <a class="nav-link" href="#" role="menuitem">profile</a>
@@ -98,15 +98,15 @@
 					  			<a href="#" class="nav-link" role="menuitem">clients</a>
 					  		</li>
 					  		<li class="nav-item">
-					  			<a href="#" class="nav-link" role="menuitem">news</a>
+					  			<a href="./news.html" class="nav-link" role="menuitem">news</a>
 					  		</li>
 					  	</ul>
 					  </div>
-					  <h1>
-						  <a class="navbar-brand" href="#">
-						  	mitalent
-						  </a>
-					  </h1>
+					  <a class="navbar-brand" href="#">
+						  <h1>
+							mitalent
+						  </h1>
+					  </a>
 				  </div>
 				</nav>
 				<!--========== end nav========-->
@@ -481,7 +481,7 @@
 							<!--trending-->
 							<div class="trending">
 								<a href="#!">
-									<figure class="m-0">
+									<figure class="trend m-0">
 										<img src="./img/slider-1.jpg" alt="trending" title="trending"/>
 										<figcaption>
 											<div class="trending-title">
