--- a/news.html
+++ b/news.html
@@ -56,7 +56,7 @@
 			start header
 		======================-->
 		<header>
-			<div class="row">
+			<div class="row h-100">
 				<div class="col-12 col-md-6">
 					<div class="news">
 						<div id="post-slider" class="carousel slide" data-ride="carousel">
@@ -292,7 +292,82 @@
 			start main
 		======================-->
 		<main>
-			
+			<div class="row m-0">
+				<div class="col-6"></div>
+				<div class="col-6">
+					<section class="news pt-5 pb-5">
+						<div class="container">
+							<div class="row">
+								<div class="col-12">
+									<div class="news-blog up pt-3 pb-3">
+										<figure class="trend">
+											<img src="./img/slider-2.jpg" alt="news-blog" title="news-blog">
+											<figcaption>
+									      		<h4>dream interpretation common symbols and their meanings</h4>
+									      		<time class="time">8 march, 2020</time>
+									      	</figcaption>
+										</figure>
+									</div>
+								</div>
+								<div class="col-12 col-md-6">
+									<div class="news-blog pt-3 pb-3">
+										<figure>
+											<img src="./img/slider-1.jpg" alt="news-blog" title="news-blog">
+											<figcaption>
+									      		<h4>dream interpretation common symbols and their meanings</h4>
+									      		<time class="time">8 march, 2020</time>
+									      	</figcaption>
+										</figure>
+									</div>
+								</div>
+								<div class="col-12 col-md-6">
+									<div class="news-blog pt-3 pb-3">
+										<figure>
+											<img src="./img/slider-3.jpg" alt="news-blog" title="news-blog">
+											<figcaption>
+									      		<h4>dream interpretation common symbols and their meanings</h4>
+									      		<time class="time">8 march, 2020</time>
+									      	</figcaption>
+										</figure>
+									</div>
+								</div>
+								<div class="col-12 col-md-6">
+									<div class="news-blog pt-3 pb-3">
+										<figure>
+											<img src="./img/slider-3.jpg" alt="news-blog" title="news-blog">
+											<figcaption>
+									      		<h4>dream interpretation common symbols and their meanings</h4>
+									      		<time class="time">8 march, 2020</time>
+									      	</figcaption>
+										</figure>
+									</div>
+								</div>
+								<div class="col-12 col-md-6">
+									<div class="news-blog pt-3 pb-3">
+										<figure>
+											<img src="./img/slider-1.jpg" alt="news-blog" title="news-blog">
+											<figcaption>
+									      		<h4>dream interpretation common symbols and their meanings</h4>
+									      		<time class="time">8 march, 2020</time>
+									      	</figcaption>
+										</figure>
+									</div>
+								</div>
+							</div>
+							<div aria-label="Page navigation" class="pt-3 pb-3">
+							  <ul class="pagination justify-content-between h-style">
+							    <li class="page-item">
+							      <a class="page-link" href="#" tabindex="-1"><i class="fa fa-long-arrow-left mr-2" aria-hidden="true"></i> Prev post</a>
+							    </li>
+							    <li class="page-item">
+							      <a class="page-link" href="#">Next post <i class="fa fa-long-arrow-right ml-2" aria-hidden="true"></i></a>
+							    </li>
+							  </ul>
+							</div>
+						</div>
+					</section>
+				</div>
+			</div>
 		</main>
 		<!--=======================
 			end main
