fixed sass import

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!--font-awesome  v4.7 -->
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
   <!--main Stylesheet -->
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
 <body>
