--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 			<!--===== start clients=========-->
 			<section class="clients pt-5 pb-5">
 				<div class="container">
-					<div class="clients-filter mb-5">
+					<div class="clients-filter">
 						<ul class="list-inline text-center">
 							<li class="list-inline-item h-style active"><button type="button" class="btn-filter" data-target="all">all</button></li>
 							<li class="list-inline-item h-style"><button type="button" class="btn-filter" data-target="actor">actor</button></li>
@@ -284,7 +284,7 @@
 						</ul>
 					</div>
 					<!--clients grid -->
-					<div class="clients-item">
+					<div class="clients-item mt-5">
 						<div class="row m-0">
 							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
 								<div class="client" data-filter="comdian">
