--- a/news.html
+++ b/news.html
@@ -292,10 +292,11 @@
 			start main
 		======================-->
 		<main>
-			<div class="row m-0">
-				<div class="col-6"></div>
-				<div class="col-6">
-					<section class="news pt-5 pb-5">
+			<!--===== start news=========-->					
+			<section class="news pt-5 pb-5">
+				<div class="row m-0">
+					<div class="col-12 col-md-6"></div>
+					<div class="col-12 col-md-6">
 						<div class="container">
 							<div class="row">
 								<div class="col-12">
@@ -365,9 +366,102 @@
 							  </ul>
 							</div>
 						</div>
-					</section>
+					</div>
 				</div>
-			</div>
+			</section>
+			<!--===== end news=========-->
+			<!--===== start clients=========-->
+			<section class="clients pt-5 pb-5">
+				<div class="container">
+					<div class="row m-0">
+						<div class="col-12 col-md-6">
+							<h2 class="title-h mb-5">our clients</h2>
+						</div>
+						<div class="col-12 col-md-6">
+							<p class="about-clients p-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, ex fugiat est laborum commodi blanditiis.</p>
+							<a href="#!" class="h-style page-link p-3">explore more <i class="fa fa-long-arrow-right ml-2" aria-hidden="true"></i></a>
+						</div>
+					</div>
+					<!--clients grid -->
+					<div class="clients-item mt-5">
+						<div class="row m-0">
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="comdian">
+									<figure>
+										<img src="./img/slider-1.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>keith ruiz</h4>
+												<span>comdian</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="actor">
+									<figure>
+										<img src="./img/slider-2.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>jon ruiz</h4>
+												<span>actor</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="musician">
+									<figure>
+										<img src="./img/slider-3.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>keith smith</h4>
+												<span>musician</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="p-0 col-12 col-md-6 col-lg-4 col-xl-3">
+								<div class="client" data-filter="model">
+									<figure>
+										<img src="./img/slider-4.jpg" alt="client" title="client"/>
+										<figcaption>
+											<a href="#!" class="client-link" aria-label="client-profile">
+												<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+											</a>
+											<div class="client-title">
+												<h4>pro ruiz</h4>
+												<span>model</span>
+											</div>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="clients-indicators mt-5">
+						<ol class="carousel-indicators">
+						    <li data-target="#news-slider" data-slide-to="0" class=""></li>
+						    <li data-target="#news-slider" data-slide-to="1" class="active"></li>
+						    <li data-target="#news-slider" data-slide-to="2" class=""></li>
+						    <li data-target="#news-slider" data-slide-to="3" class=""></li>
+						</ol>
+					</div>
+				</div>
+			</section>
+			<!--===== end clients=========-->
 		</main>
 		<!--=======================
 			end main
